<resources>
    <string name="app_name">Payments</string>
    <string name="expired_date_label">만료일</string>
    <string name="expired_date_placeholder">MM / YY</string>
    <string name="card_number_label">카드 번호</string>
    <string name="card_number_placeholder">0000 - 0000 - 0000 - 0000</string>
    <string name="password_label">비밀번호</string>
    <string name="password_placeholder">0000</string>
    <string name="owner_name_label">카드 소유자 이름(선택)</string>
    <string name="owner_name_placeholder">카드에 표시된 이름을 입력하세요.</string>
    <string name="card_list_title">Payments</string>
    <string name="card_list_add_new_card">새로운 카드를 등록해주세요</string>
    <string name="card_list_add_new_card_top_bar">추가</string>
    <string name="card_list_add_new_card_fail">카드 등록에 실패했습니다.</string>
    <string name="new_card_top_bar_title">카드 추가</string>
    <string name="edit_card_top_bar_title">카드 변경</string>
    <string name="card_list_edit_card_fail">카드 변경에 실패했습니다.</string>
</resources>
